# rust_pluginloader_prototype

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
plugin_sdk/: Cargo.toml
plugin_sdk/src/: depreciated.rs  lib.rs
pluginloader/: Cargo.toml
pluginloader/src/: main.rs
second_plugin/: Cargo.toml
second_plugin/src/: lib.rs
test_plugin/: Cargo.toml
test_plugin/src/: lib.rs
test_plugin/test_sub_sdk/: Cargo.toml
