[package]
name = "second_plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate_type = ["dylib"]
bench = false

[dependencies]
plugin_sdk = { path = "../plugin_sdk" }
test_sub_sdk = { path = "../test_plugin/test_sub_sdk" }
